2011-02-07  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/47636
	* config/rs6000/rs6000.md (rsqrt<mode>2): Use the correct macro
	for the condition.

2011-02-07  Mike Stump  <mikestump@comcast.net>

	* config/darwin.opt (mmacosx-version-min): Update default OS
	version.

2011-02-07  Denis Chertykov  <chertykov@gmail.com>

	PR target/47534
	* config/avr/libgcc.S (exit): Move .endfunc

2011-02-07  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47615
	* tree-ssa-sccvn.h (run_scc_vn): Take a vn-walk mode argument.
	* tree-ssa-sccvn.c (default_vn_walk_kind): New global.
	(run_scc_vn): Initialize it.
	(visit_reference_op_load): Use it.
	* tree-ssa-pre.c (execute_pre): Use VN_WALK if in PRE.

2011-02-07  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.c (spu_init_libfuncs): Install SImode and
	DImode trapping arithmetic libfuncs.

2011-02-07  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47621
	* tree-ssa.c (non_rewritable_lvalue_p): New function, split out from
	two duplicates ...
	(execute_update_addresses_taken): ... here.  Make it more
	conservative in what we accept.

2011-02-06  Joseph Myers  <joseph@codesourcery.com>

	* config/sparc/freebsd.h (ASM_SPEC): Define.
	* config/sparc/vxworks.h (ASM_SPEC): Define.

2011-02-06  Joseph Myers  <joseph@codesourcery.com>

	* config/sparc/sol2-bi.h (CC1_SPEC): Remove %{sun4:} %{target:}.

2011-02-06  Steven Bosscher  <steven@gcc.gnu.org>

	* doc/invoke.texi: Remove reference to compiler internals from
	user documentation.

	* reg-notes.def: Remove REG_VALUE_PROFILE.
	* combine.c (distribute_notes): Do not handle REG_VALUE_PROFILE.

2011-02-05  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/47610
	* varasm.c (default_section_type_flags): If decl is NULL,
	and name is .data.rel.ro or .data.rel.ro.local, set SECTION_RELRO bit.

2011-02-05  Jie Zhang  <jie@codesourcery.com>

	PR debug/42631
	* web.c (entry_register): Don't clobber the number of the