@@ -1,3 +1,14 @@
+2011-02-07  Mike Stump  <mikestump@comcast.net>
+
+	PR target/47558
+	Add __ieee_divdc3 entry point.
+	* config/i386/darwin.h (DECLARE_LIBRARY_RENAMES): Retain ___divdc3
+	entry point.
+	(SUBTARGET_INIT_BUILTINS): Call darwin_rename_builtins.
+	* config/i386/i386.c (TARGET_INIT_LIBFUNCS): Likewise.
+	* config/darwin.c (darwin_rename_builtins): Add.
+	* config/darwin-protos.h (darwin_rename_builtins): Add.
+
 2011-02-07  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	PR target/47636
